# distribution

./: Cargo.toml  README.md  deny.toml  rust-toolchain.toml  taplo.toml  typos.toml
.cargo/: config.toml  rustc-static  rustc-static.bat
.github/: dependabot.yml
.github/actions/common-setup/: action.yml
.github/actions/plan/: modes.ts  plan.js  platforms.ts
.github/scripts/: cargo-zigbuild.sh  use-zig.sh  zig.sh
.github/scripts/build_env/: macos.sh  ubuntu.sh  windows.sh
.github/workflows/: _build.yml  _code.yml  build.yml  code.yml  dev.yml  release.yml  toml.yml
build-info/: binaries
build-utils/: archive-binaries  cargo-zigbuild-download-url  list-bin-targets  package  zig-download-url
crates/built-in-sources/: Cargo.toml
crates/built-in-sources/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: issue_printer.rs  lib.rs  main.rs  package_render.rs  selector.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  load.rs  paths.rs  schemas.rs
crates/config/src/schemas/: manifest_urls.rs  repos.rs
crates/detection/: Cargo.toml
crates/detection/src/: lib.rs
crates/detection/src/implementation/: default.rs  windows.rs
crates/installer/: Cargo.toml
crates/installer/src/: http.rs  install.rs  lib.rs
crates/nodejs-bindings/: Cargo.toml
crates/nodejs-bindings/src/: lib.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: filter.rs  http.rs  lib.rs  resolve.rs
crates/schema/: Cargo.toml
crates/schema/src/: lib.rs  manifest.rs  repo.rs  test_utils.rs
crates/schema/testdata/: manifest.json
