[package]
name = "humanode-distribution"
version = "0.1.0"
edition = "2021"

[dependencies]
humanode-distribution-detection = { path = "../detection" }
humanode-distribution-installer = { path = "../installer" }
humanode-distribution-resolver = { path = "../resolver" }
humanode-distribution-schema = { path = "../schema" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
reqwest = "0.11"
serde = "1.0"
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
