[package]
name = "humanode-distribution"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
humanode-distribution-built-in-sources = { path = "../built-in-sources" }
humanode-distribution-config = { path = "../config" }
humanode-distribution-detection = { path = "../detection" }
humanode-distribution-installer = { path = "../installer" }
humanode-distribution-resolver = { path = "../resolver" }
humanode-distribution-schema = { path = "../schema" }

clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "socks"] }
serde_json = "1"
serde_yaml_bw = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3"
