[package]
name = "humanode-distribution-installer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
humanode-distribution-schema = { path = "../schema" }

bytes = "1"
digest = "0.10"
futures = "0.3"
hex = "0.4"
reqwest = { version = "0.12", default-features = false }
serde = "1.0"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["fs"] }
url = "2"
