[package]
name = "humanode-distribution-nodejs-bindings"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
humanode-distribution-built-in-sources = { path = "../built-in-sources" }
humanode-distribution-config = { path = "../config" }
humanode-distribution-detection = { path = "../detection" }
humanode-distribution-installer = { path = "../installer" }
humanode-distribution-resolver = { path = "../resolver" }
humanode-distribution-schema = { path = "../schema" }
